# agent-learn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: sync-to-gitee.yml
agno-learn/: playground.py  stock_analyzer.ipynb
dspy-learn/: agent.ipynb  gsm8k.ipynb  optimized_react.json  optimizer.ipynb  simpler.ipynb
dspy-learn/mipro_optimized/: metadata.json  program.pkl
from-scratch/: react.ipynb  react_function_calling.ipynb  react_tao.ipynb  tools.py
openai-learn/: input_guardrails.ipynb  llm-as-a-judge.ipynb  routing.ipynb
smolagents-learn/: .env.exmaple  custom_tools.py  stock_analyser.ipynb  stock_analyser.py  transcriber.ipynb  transcriber.py  trip_planner.ipynb  trip_planner.py  utils.py  vision_web_browser.py
